<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.seratic.models.Usuario" />

        <variable
            name="handler"
            type="com.seratic.RegisterUser" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterUser">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/regis_user"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/regis_user" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/icon_login"
            android:layout_height="@dimen/icon_login"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout3"
            app:srcCompat="@drawable/ic_person" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regis_cedula"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="@dimen/icon_login"
            android:layout_height="@dimen/icon_login"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout4"
            app:srcCompat="@drawable/ic_person" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regis_name"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="@dimen/icon_login"
            android:layout_height="@dimen/icon_login"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout5"
            app:srcCompat="@drawable/ic_person" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regis_last"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="@dimen/icon_login"
            android:layout_height="@dimen/icon_login"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout6"
            app:srcCompat="@drawable/ic_contacts" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout6"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regis_username"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="@dimen/icon_login"
            android:layout_height="@dimen/icon_login"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout7"
            app:srcCompat="@drawable/ic_lock" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout7"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regis_pass"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/regis"
            android:onClick="@{()->handler.regis()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" />
    </android.support.constraint.ConstraintLayout>
</layout>